2006-10-26  Thomas Schwinge  <tschwinge@gnu.org>

	[task #5956 --- ``Automake'ify GNU Mach's code base'']
	The Automake build system wants us to have these files in the rcs, so
	do that.
	* doc/mach.info: New file, generated.
	* doc/mach.info-1: Likewise.
	* doc/mach.info-2: Likewise.
	* doc/stamp-vti: Likewise.
	* doc/version.texi: Likewise.

2006-10-18  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.in: Regenerate.

	Install `PREFIX/share/msgids/gnumach.msgids'.
	* Makerules.am (%.msgids): Two new rules.
	* Makefrag.am (MOSTLYCLEANFILES): Add `gnumach.msgids'.
	(gnumach.msgids): New rule.
	(exec_msgidsdir, exec_msgids_DATA): New variables.

2006-10-16  Thomas Schwinge  <tschwinge@gnu.org>

	* configure: Regenerate.

	[bug #18011 --- ``GNU Mach: `make install-data' will build the
	``to-be-generated files'''']
	* config.status.dep.patch: Do an educated guess instead of using the
	`Makefile'.
	* configure.ac <config.status.dep.patch>: Update description.

2006-10-15  Thomas Schwinge  <tschwinge@gnu.org>

	* configure: Regenerate.

	* configure.ac: Update texts snippets: GNU Automake 1.10 has just been
	released.

	* i386/include/Makefile.in: Remove unused file.  Thanks to Guillem
	Jover for spotting this.

	[task #5956 --- ``Automake'ify GNU Mach's code base'']

	* configure: Regenerate.

	* configure.ac <config.status.dep.patch>: Point to [bug #18011 ---
	``GNU Mach: `make install-data' will build the ``to-be-generated
	files''''].

	* Makefile.in: Regenerate.

	* Makefrag.am (include_mach_exec): Rename to `include_mach_eXec'.

	* Makefile.in: New file, generated by `autoreconf'.
	* config.h.in: Likewise.
	* configure: Updated file, generated by `autoreconf'.

	* INSTALL: File updated, thanks to `autoreconf'.
	* aclocal.m4: Likewise.

	* build-aux/compile: New file, thanks to `autoreconf'.
	* build-aux/config.guess: Likewise.
	* build-aux/config.sub: Likewise.
	* build-aux/depcomp: Likewise.
	* build-aux/install-sh: Likewise.
	* build-aux/mdate-sh: Likewise.