@@ -1,6 +1,11 @@
 2006-10-26  Thomas Schwinge  <tschwinge@gnu.org>
 
 	[task #5956 --- ``Automake'ify GNU Mach's code base'']
+
+	* Makefrag.am (gnumach.msgids): Remove repetition.
+	* Makerules.am (%.server.msgids, %.user.msgids): Targets renamed from
+	`%.msgids'.  Also consider MIGCOMSFLAGS respective MIGCOMUFLAGS.
+
 	The Automake build system wants us to have these files in the rcs, so
 	do that.
 	* doc/mach.info: New file, generated.
